Fix issue where image-gallery goes out of viewport when coming out of the lightbox

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -150,16 +150,6 @@
   box-sizing: border-box;
 }
 
-html {
-  scroll-behavior: smooth;
-}
-
-@media screen and (prefers-reduced-motion: reduce) {
-  html {
-    scroll-behavior: auto;
-  }
-}
-
 header {
   height: var(--nav-height);
 }
